...
                    </Spinner>
                </LinearLayout>
            </RelativeLayout>


            <EditText
                android:id="@+id/et_publish_title"
                android:layout_width="@dimen/dimen_250"
                android:layout_height="@dimen/dimen_50"
                android:layout_below="@id/rlyt_header"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_100"
                android:hint="@string/make_a_title"
...
                android:singleLine="true"
                android:textColor="@color/text_gray"
                android:textColorHint="@color/text_gray"
                android:textSize="@dimen/text_size_4"/>

            <Button
                android:id="@+id/btn_start_publish"
                android:layout_width="@dimen/dimen_150"
                android:layout_height="@dimen/dimen_50"
                android:layout_below="@id/et_publish_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_50"
                android:text="@string/go_publish"
...
