...
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/sl_btn"
                    android:textSize="@dimen/text_size_5"/>

                <TextView
                    android:id="@+id/tv_close"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/close"
                    android:textColor="@color/colorPrimary"
...
